2013-01-18 19:00  paddockd

	* [r392] ChangeLog, makefile.linux26-display,
	  src/squeezeslave/squeezeslave.h: Fix OSS write device errors for
	  Sun Ray OSS audio driver emulator by reducing
	  PA_FRAMES_PER_BUFFER to the maximum write size of 8k.
	  Enabled AUDIODEV support for portaudio v18.1 OSS linux 2.6.

2013-01-18 18:54  paddockd

	* [r391] ChangeLog, config/squeezelite.plist,
	  config/squeezeslave.plist: Updated squeezeslave.plist for 1.3
	  release.

2012-12-28 20:00  paddockd

	* [r390] ChangeLog, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c, src/squeezeslave/squeezeslave.h:
	  Increased version to 1.3.
	  Increased firmware version to 10.
	  Increased revision to 390.

2012-12-28 19:17  paddockd

	* [r389] ChangeLog, config/alsapcm2file.c,
	  contrib/makefile.linux24-xm-display: Added alsapcm capture
	  program used to record siriusxm.
	  Added optimized siriusxm linux 2.4 alsa makefile.

2012-12-28 19:05  paddockd

	* [r388] tests/alsacap.c, tests/mmsdecode1.c, tests/mmsdecode2.cpp:
	  Added mms/wma decoder example programs.
	  Added alsa device capabilities info program.

2012-12-28 19:02  paddockd

	* [r387] ChangeLog, sources/portaudio-r1608.tar.gz,
	  sources/portaudio-r1834.tar.gz, sources/portaudio-r1857.tar.gz,
	  sources/portaudio-r1871.tar.gz, sources/portaudio-r1878.tar.gz:
	  Removed old libportaudio r1608,r1834,r1857,r1871 and r1878
	  sources.

2012-12-28 18:16  paddockd

	* [r386] ChangeLog, contrib/makefile.freebsd-i386,
	  contrib/makefile.freebsd-sparc64,
	  contrib/makefile.linux24-ffmpeg-alsa-display,
	  contrib/makefile.linux24-gcc43-alsa-display,
	  contrib/makefile.linux24-nofpu-alsa-display,
	  contrib/makefile.linux26-armel-alsa,
	  contrib/makefile.linux26-armhf-alsa-display,
	  contrib/makefile.linux26-ffmpeg-alsa-display,
	  contrib/makefile.linux26-mipsel-nofpu-alsa,
	  contrib/makefile.linux26-mipsel-nofpu-oss-padev,
	  contrib/makefile.linux26-nofpu-alsa-display,