@@ -56,8 +56,8 @@ unsigned long pa_numberOfBuffers = PA_NUM_BUFFERS;
 
 static volatile bool signal_exit_flag = false;
 static volatile bool signal_restart_flag = false;
-const char* version = "1.3L";
-const int revision = 393;
+const char* version = "1.4L";
+const int revision = 395;
 static int port = SLIMPROTOCOL_PORT;
 static int firmware = FIRMWARE_VERSION;
 static int player_type = PLAYER_TYPE;
